moved to media subfolder

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Ignore intermediate and low-quality renders
-videos/*/*/partial_movie_files
-videos/*/480p15
-media/Tex
 media/videos/*/*/partial_movie_files
+media/videos/*/480p15
+media/Tex
 
 # Py cache should be ignored
 *.pyc
